--- a/src/Soenneker.Blazor.Utils.Session.csproj
+++ b/src/Soenneker.Blazor.Utils.Session.csproj
@@ -41,5 +41,6 @@
         <PackageReference Include="Soenneker.Extensions.Configuration" Version="3.0.697" />
         <PackageReference Include="Soenneker.Extensions.Task" Version="3.0.102" />
         <PackageReference Include="Soenneker.Extensions.ValueTask" Version="3.0.92" />
+        <PackageReference Include="Soenneker.Utils.Delay" Version="3.0.20" />
     </ItemGroup>
 </Project>
