--- a/src/Soenneker.Blazor.Utils.Session.csproj
+++ b/src/Soenneker.Blazor.Utils.Session.csproj
@@ -36,6 +36,7 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
+        <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
 
         <PackageReference Include="Soenneker.Blazor.Utils.Navigation" Version="3.0.978" />
         <PackageReference Include="Soenneker.Extensions.Configuration" Version="3.0.700" />
