--- a/src/Soenneker.Blazor.Utils.Session.csproj
+++ b/src/Soenneker.Blazor.Utils.Session.csproj
@@ -36,9 +36,11 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-        <PackageReference Include="Nito.AsyncEx" Version="5.1.2" />
-        <PackageReference Include="Soenneker.Atomics.Longs" Version="4.0.2" />
+    </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Soenneker.Asyncs.Locks" Version="4.0.3" />
+        <PackageReference Include="Soenneker.Atomics.Longs" Version="4.0.2" />
         <PackageReference Include="Soenneker.Blazor.Utils.Navigation" Version="4.0.1030" />
         <PackageReference Include="Soenneker.Extensions.Configuration" Version="4.0.745" />
         <PackageReference Include="Soenneker.Extensions.Task" Version="4.0.108" />
